--- a/public/1.comp.1/index.html
+++ b/public/1.comp.1/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello React</title>
-
   </head>
   <body>
-    <div id="mydiv"></div>
-
+    <div id="mydiv1"></div>
+    <div id="mydiv2"></div>
     <script src="https://fb.me/react-0.14.5.js"></script> <!--  -->
     <script src="https://fb.me/react-dom-0.14.5.js"></script> <!--   -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script> <!--  -->
