--- a/public/1.comp.1/es6_2.html
+++ b/public/1.comp.1/es6_2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello React</title>
+    <title>Es6 React</title>
   </head>
   <body>
     <div id="mydiv"></div>
@@ -14,9 +14,9 @@
     
     class MyComponent extends React.Component{
         render(){
-            var x1 = this.props.first;
-            var x2 = this.props.second;
-            var z  = x1 + x2;
+            let x1 = this.props.first;
+            let x2 = this.props.second;
+            let z  = x1 + x2;
             console.log(z);
             return (
             <div>
